<resources>
    <string name="app_name">Jago Sholat</string>
    <string name="bismillah">بِسْــــــــــــــــــمِ اللهِ الرَّحْمَنِ الرَّحِيْم</string>
    <string name="mendatang">Mendatang</string>
    <string name="team">Dug Legir</string>
    <string name="simpan">Catat</string>
    <string name="btn_tutor_wudhu">Tata Cara Wudhu</string>
    <string name="btn_niat_sholat">Niat Shalat</string>
    <string name="btn_tutor_sholat">Tata Cara Shalat</string>
    <string name="btn_doa">Doa Setelah Shalat</string>
    <string name="grafik">Grafik</string>
    <string name="stat_harian">Harian</string>
    <string name="stat_semua">Semua Data</string>
    <string name="judul_statistik">Statistik Shalat Hari Ini</string>
    <string name="hadis_arab_0">الْعَهْدُ الَّذِى بَيْنَنَا وَبَيْنَهُمُ الصَّلاَةُ فَمَنْ تَرَكَهَا فَقَدْ كَف</string>
    <string name="hadis_text_0">“Perjanjian antara kami dan mereka (orang kafir) adalah shalat. Barangsiapa meninggalkannya maka dia telah kafir.” (HR. Ahmad, Tirmidzi, An Nasa’i, Ibnu Majah.Dikatakan shohih oleh Syaikh Al Albani. Lihat Misykatul Mashobih no. 574)</string>
    <string name="hadis_arab_1">مَنْ صَلَّى الْبَرْدَيْنِ دَخَلَ الْجَنَّة</string>
    <string name="hadis_text_1">“Barangsiapa yang mengerjakan shalat bardain (yaitu shalat shubuh dan ashar) maka dia akan masuk surga.” (HR. Bukhari no. 574 dan Muslim no. 635)</string>
    <string name="hadis_arab_2">بَيْنَ العَبْدِ وَبَيْنَ الكُفْرِ وَالإِيْمَانِ الصَّلَاةُ فَإِذَا تَرَكَهَا فَقَدْ أَشْرَكَ</string>
    <string name="hadis_text_2">“Pemisah Antara seorang hamba dengan kekufuran dan keimanan adalah shalat. Apabila dia meninggalkannya, maka dia melakukan kesyirikan.” (HR. Ath Thobariy dengan sanad shohih.)</string>
    <string name="hadis_arab_3">عَنْ بُرَيْدَةَ رض قَالَ: سَمِعْتُ رَسُوْلَ اللهِ ص يَقُوْلُ: اَلْعَهْدُ الَّذِى بَيْنَنَا وَ بَيْنَهُمُ الصَّلاَةُ. فَمَنْ تَرَكَهَا فَقَدْ كَفَرَ. الخمسة، فى نيل الاوطار 1: 343</string>
    <string name="hadis_text_3">Dari Buraidah RA, ia berkata : Saya mendengar Rasulullah SAW bersabda, “Perjanjian antara kami dan mereka adalah shalat, maka barangsiapa meninggalkannya, maka sungguh ia telah kufur”. [HR. Khamsah, dalam Nailul Authar juz 1, hal. 343]</string>
    <string name="hadis_arab_4">الصَّلَوَاتُ الْخَمْسُ وَالْجُمُعَةُ إِلَى الْجُمُعَةِ وَرَمَضَانُ إِلَى رَمَضَانَ مُكَفِّرَاتٌ مَا بَيْنَهُنَّ إِذَا اجْتَنَبَ الْكَبَائِرَ</string>
    <string name="hadis_text_4">“Di antara shalat yang lima waktu, di antara Jumat yang satu dan Jumat lainnya, di antara Ramadhan yang satu dan Ramadhan lainnya, itu akan menghapuskan dosa di antara keduanya selama seseorang menjauhi dosa-dosa besar.” (HR. Muslim no. 233).</string>
    <string name="hadis_arab_5">بَشِّرِ الْمَشَّائِينَ فِى الظُّلَمِ إِلَى الْمَسَاجِدِ بِالنُّورِ التَّامِّ يَوْمَ الْقِيَامَةَِ</string>
    <string name="hadis_text_5">“Berilah kabar gembira bagi orang yang berjalan ke masjid dalam keadaan gelap bahwasanya kelak ia akan mendapatkan cahaya sempurna pada hari kiamat.” (HR. Abu Daud no. 561 dan Tirmidzi no. 223</string>
    <string name="sholat_shubuh">Shalat Shubuh</string>
    <string name="sholat_dzuhur">Shalat Dzuhur</string>
    <string name="sholat_ashar">Shalat Ashar</string>
    <string name="sholat_maghrib">Shalat Maghrib</string>
    <string name="sholat_isya">Shalat Isya</string>
    <string name="aboutUs_pengertian">Jago sholat adalah aplikasi berbasis mobile android yang fungsinya
    untuk memudahkan umat muslim untuk mencatat ibadah mereka agar mereka tau apakah sholatnya semakin
    baik atau semakin tidak baik</string>
    <string name="aboutUs_apasih">apa sih jago sholat?</string>
    <string name="aboutUs_made1">Made with Android Studio 3.0.3</string>
    <string name="aboutUs_made2">Using SQLite for database</string>
    <string name="aboutUs_nama_ican">M. Ikhsan R</string>
    <string name="aboutUs_nama_amir">M. Faisal Amir</string>
    <string name="aboutUs_nama_bryan">Bryan Rafsanzani</string>
    <string name="aboutUs_version">2018 | JagoSholat V1.0</string>
    <string name="aboutUs_saran1">Ada Saran?</string>
    <string name="aboutUs_saran2">Kirim saran kamu ke</string>
    <string name="aboutUs_saran3">DugLegir@gmail.com</string>
    <string name="statistik_tanggal">Tanggal</string>
    <string name="statistik_waktu">Waktu</string>
    <string name="statistik_shalat">Shalat</string>
    <string name="kompas_no_internet">No Internet Connection</string>
    <string name="jadwal_helper_saatnya_shalat">Saatnya</string>
    <string name="jam">jam</string>
</resources>