<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_primary"
    android:background="@color/background_app"
    tools:context=".ui.fragment.CatatanFragment">

    <TextView
        android:id="@id/catatan_textview_bismillah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/bismillah"
        android:textColor="@color/textColorBlack"
        android:textSize="22sp"
        android:textStyle="italic"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@id/catatan_linearlayout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_button"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/catatan_textview_bismillah"
        android:paddingTop="32dp"
        android:paddingBottom="32dp">

        <TextView
            android:id="@id/catatan_textview_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorButton"
            android:textSize="20sp"
            tools:text="Tanggal" />

        <TextView
            android:id="@id/jadwal_textview_shalat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textColor="@color/textColorButton"
            android:textSize="37sp"
            tools:text="Sholat Dzuhur" />
    </LinearLayout>

    <TextView
        android:id="@id/catatan_textview_hadist_arab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/hadis_arab_0"
        android:textColor="@color/textColorBlack"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/catatan_linearlayout_container"/>

    <TextView
        android:id="@id/catatan_textview_hadist_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hadis_text_0"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/catatan_textview_hadist_arab"/>

    <!--Button-->
    <Button
        android:id="@id/catatan_button_catat_ibadah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_submit"
        android:text="@string/simpan"
        android:textColor="@color/textColorButton"
        android:textSize="20sp" />

</RelativeLayout>