<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/Judul_statistik"
        app:cardCornerRadius="@dimen/dimen_small"
        app:cardElevation="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toTopOf="@+id/cardView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <TextView
            android:id="@+id/txt_waktu_maghrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:gravity="start|end"
            android:text="04.53"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="49dp"
            android:layout_height="31dp"
            android:layout_marginTop="7dp"
            app:srcCompat="@drawable/clock" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginRight="45dp"
            android:text="@string/sholat_maghrib"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/dimen_small"
        app:cardElevation="@dimen/dimen_small"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="28, januari 2018"
            android:textColor="@color/IconUnselect" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Senin"
            android:textColor="@android:color/background_light" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="@dimen/dimen_small"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="37dp"
            android:layout_height="39dp"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/clock" />

        <TextView
            android:id="@+id/countDown"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="waktu hitung mundur"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txt_sholat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/sholat_ashar"
            android:textColor="?attr/colorBackgroundFloating" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Menuju"
            android:textColor="@color/IconUnselect" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="@dimen/dimen_small"
        app:cardElevation="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="45dp"
            android:layout_height="71dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/jadwal_helper_saatnya_shalat"
            app:srcCompat="@drawable/mosque" /> <!--Icon made by [author link] from www.flaticon.com -->

        <TextView
            android:id="@+id/txt_sholat_sekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:text="@string/sholat_shubuh"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/jadwal_helper_saatnya_shalat"
            android:textColor="?attr/colorBackgroundFloating" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        app:cardBackgroundColor="@color/Judul_statistik"
        app:cardCornerRadius="@dimen/dimen_small"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="49dp"
            android:layout_height="31dp"
            android:layout_marginTop="7dp"
            app:srcCompat="@drawable/clock" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="80dp"
            android:text="@string/sholat_shubuh"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_waktu_shubuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:text="04.53"
            android:textSize="24sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/Judul_statistik"
        app:cardCornerRadius="@dimen/dimen_small"
        app:layout_constraintBottom_toTopOf="@+id/cardView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="49dp"
            android:layout_height="31dp"
            android:layout_marginTop="7dp"
            app:srcCompat="@drawable/clock" />

        <TextView
            android:id="@+id/txt_waktu_ashar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:text="04.53"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="88dp"
            android:text="@string/sholat_ashar"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/Judul_statistik"
        app:cardCornerRadius="@dimen/dimen_small"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:id="@+id/txt_waktu_dzuhur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:text="04.53"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="49dp"
            android:layout_height="31dp"
            android:layout_marginTop="7dp"
            app:srcCompat="@drawable/clock" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="80dp"
            android:text="@string/sholat_dzuhur"
            android:textSize="24sp" />

    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="131dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/Judul_statistik"
        app:cardCornerRadius="@dimen/dimen_small"
        app:cardElevation="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6">

        <TextView
            android:id="@+id/txt_waktu_isya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:text="04.53"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="98dp"
            android:text="@string/sholat_isya"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="49dp"
            android:layout_height="31dp"
            android:layout_marginTop="7dp"
            app:srcCompat="@drawable/clock" />
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</android.support.constraint.ConstraintLayout>